<resources>
    <string name="app_name" translatable="false">Sports Tracker</string>
    <string name="hello_home_fragment" translatable="false">Hello home fragment</string>
    <string name="hello_map_fragment" translatable="false">Hello map fragment</string>
    <string name="hello_profile_fragment" translatable="false">Hello profile fragment</string>
    <string name="profile_label">Profile</string>
    <string name="home_label">Home</string>
    <string name="map_label">Map</string>
    <string name="current_location">Current Location</string>
    <string name="speed_meter" translatable="false">%.2fKm/h</string>
    <string name="distance_meter" translatable="false">%.1fm</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="stop_exercise">Stop Exercise</string>
    <string name="new_exercise">New exercise</string>
</resources>